symmetrical-broccoli-routetable-eu-central-1
{
    "RouteTable": {
        "Associations": [], 
        "RouteTableId": "rtb-57f4d73f", 
        "VpcId": "vpc-5ab4da32", 
        "PropagatingVgws": [], 
        "Tags": [], 
        "Routes": [
            {
                "GatewayId": "local", 
                "DestinationCidrBlock": "10.10.10.0/24", 
                "State": "active", 
                "Origin": "CreateRouteTable"
            }
        ]
    }
}
